<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_start_logging_in"
            android:autoLink="web"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/account_number_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/account_number_hint"
                android:digits="0123456789 "
                android:maxLength="19"
                android:fontFamily="monospace"
                android:autofillHints="username" />

            <Button
                android:id="@+id/button_first"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toRightOf="@id/account_number_input" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once_thats_done"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:autoLink="web"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_version_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text=""
        android:textColor="#787878"
        android:textSize="12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>